fix(gtk): fix alignment issues with nautilus sidebar in gnome v50

--- a/gtk-4.0/widgets/_sidebar.scss
+++ b/gtk-4.0/widgets/_sidebar.scss
@@ -126,81 +126,77 @@ placessidebar {
 												$_sidebar_color 35px,$_sidebar_color 36px,
 												$_sidebar_color 36px,$_sidebar_color 99%, 
 												$_sidebar_color 100%);
-		row{
+		row.activatable{
       padding: 1px 11px;
-			&.sidebar-row {
-        label { 
-          color: $headerbar_fg_color; 
-          padding-left: 30px;
+      label { 
+        color: $headerbar_fg_color; 
+        padding-left: 25px;
+      }
+      margin: 0;
+      border-radius: 0;
+      color: $headerbar_fg_color;
+      &:hover{
+        transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        background-color: transparent; /*rgba(65,67,75,0.4); */
+        background-image:linear-gradient(to right, rgba(65,67,75,0) 40px, rgba(0,0,0,0.12) 40px,rgba(0,0,0,0.12) 97%);
+      }
+
+      &:active{
+        &:hover{
+          background-color: rgba(0,0,0,0.23);
         }
-        margin: 0;
-        border-radius: 0;
-        color: $headerbar_fg_color;
+      }
 
-				&:hover{
-					transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-					background-color: transparent; /*rgba(65,67,75,0.4); */
-					background-image:linear-gradient(to right, rgba(65,67,75,0) 40px, rgba(0,0,0,0.12) 40px,rgba(0,0,0,0.12) 97%);
-				}
-
-				&:active{
-					&:hover{
-						background-color: rgba(0,0,0,0.23);
-					}
-				}
-
-				&:selected{
-          color: #fff;
-          label {
-            color: $selected_bg_color;
-          }
-					background-color: transparent;
-					background-image:linear-gradient(to right, $selected_bg_color 40px,
-																rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
-					&:hover{
-						color: #ffffff;
-						background-color: rgba(0,0,0,0.24);
-						.sidebar-icon {
-							color: #ffffff;
-						}
-          }
-          &:backdrop{
-            color: rgba(0,0,0,0.54);;
-            background-color: transparent;
-            background-image:linear-gradient(to right, $selected_bg_color 40px,
-                                  rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
-          
-            .sidebar-icon {
-              -gtk-icon-shadow: none;
-              color: inherit; 
-            }
-          }
-
-					.sidebar-icon {
-						-gtk-icon-shadow: 0 1px transparentize(#fff, 0.2);
-						color: inherit; 
-					}
+      &:selected{
+        color: #fff;
+        label {
+          color: $selected_bg_color;
         }
+        background-color: transparent;
+        background-image:linear-gradient(to right, $selected_bg_color 40px,
+                              rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
+        &:hover{
+          color: #ffffff;
+          background-color: rgba(0,0,0,0.24);
+          .sidebar-icon {
+            color: #ffffff;
+          }
+        }
+        &:backdrop{
+          color: rgba(0,0,0,0.54);;
+          background-color: transparent;
+          background-image:linear-gradient(to right, $selected_bg_color 40px,
+                                rgba(65,67,75,0) 36px, rgba(65,67,75,0)97%);
         
-        &.sidebar-new-bookmark-row { 
-          &, label, .sidebar-icon {
-            color: $yellow; 
+          .sidebar-icon {
+            -gtk-icon-shadow: none;
+            color: inherit; 
           }
         }
 
-        &:drop(active):not(:disabled) {
-          &, label, image { color: $drop_target_color; }
-    
-          box-shadow: inset 0 1px $drop_target_color,
-                      inset 0 -1px $drop_target_color;
-    
-          &:selected {
-            &, label, image { color: $selected_fg_color; }
-            background: $drop_target_color;
-          }
+        .sidebar-icon {
+          -gtk-icon-shadow: 0 1px transparentize(#fff, 0.2);
+          color: inherit; 
         }
+      }
+      
+      &.sidebar-new-bookmark-row { 
+        &, label, .sidebar-icon {
+          color: $yellow; 
+        }
+      }
 
-			}
+      &:drop(active):not(:disabled) {
+        &, label, image { color: $drop_target_color; }
+  
+        box-shadow: inset 0 1px $drop_target_color,
+                    inset 0 -1px $drop_target_color;
+  
+        &:selected {
+          &, label, image { color: $selected_fg_color; }
+          background: $drop_target_color;
+        }
+      }
 		}
 	
 	list{ 
